# Rust-01-RCLI

./: .pre-commit-config.yaml  Cargo.toml  README.md  cliff.toml  deny.toml
.github/workflows/: rust.yml
assets/: README.md
src/: lib.rs  main.rs  opts.rs  process.rs
src/process/: gen_pass.rs
